--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 body {
-    background-color:gainsboro;
-    
-}
+   
+   margin-left: 200px;
+   margin-right: 200px;
+} 
 div{
     display: flex;
     justify-content: center;
+    padding: 30px;
 }
 h1{
     text-align: center;
